crates/reinhardt-pages/tests/ui/form/fail/old_form_callback_clause.stderr
error: `form!` runtime callback clauses were removed; configure submit lifecycle through `use_form(&form)`
  --> tests/ui/form/fail/old_form_callback_clause.rs:16:3
   |
16 |         on_success: |_result: i64| {},
   |         ^^^^^^^^^^
